--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.RaiseHands">
-        <activity android:name=".user_login"></activity>
+        <activity android:name=".user_donate"></activity>
+        <activity android:name=".user_registration" />
+        <activity android:name=".user_login" />
         <activity android:name=".user_project" />
         <activity android:name=".user_dashboard" />
         <activity android:name=".MainActivity">
